<resources>
    <string name="app_name">Market</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_select_photo">SelectPhoto</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_category">Categories</string>
    <string name="menu_ad">Advertisment</string>
    <string name="menu_user">Users</string>
    <string name="product">Products</string>
    <string name="logout">Log Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add_activity">Add activity</string>
</resources>