<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/ad"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_ad" />
        <item
            android:id="@+id/product"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/product" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logout" />
    </group>
</menu>